--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+
 # Editor directories and files
 .idea
 .vscode
@@ -19,3 +20,8 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
+
+#specific files
+package-lock.json
+.firebaserc
+firestore.rules
